--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   web-build:
+    name: Build
     runs-on: ubuntu-latest
     env:
       DB_HOST: ${{ secrets.DB_HOST }}
@@ -28,12 +29,13 @@ jobs:
     - name: Install MySQL Client
       run: sudo apt-get install mysql-client -y
     
-    - name: Debug MySQL connection
+    - name: Debug MySQL Connection
       run: |
         echo "MySQL Host: ${DB_HOST}"
         echo "MySQL User: ${DB_USER}"
         echo "MySQL Password: ${DB_PASSWORD}"
         echo "MySQL Database: ${DB_NAME}"
+        mysql -h"${DB_HOST}" -u"${DB_USER}" -p"${DB_PASSWORD}" -e "SHOW DATABASES;" --verbose
 
     - name: Test MySQL Connection
       run: |
