--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Cache Composer dependencies
       uses: actions/cache@v3
       with:
-        path: ~/.composer/cache
+        path: ~/.composer/cache/files  
         key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
         restore-keys: |
           ${{ runner.os }}-composer-
