--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -139,8 +139,8 @@ jobs:
         server: ${{ secrets.ftp_server }}
         username: ${{ secrets.ftp_username }}
         password: ${{ secrets.ftp_password }}
-        server_dir: /public_html/demo_project_cicd/
-        local_dir: ./  # Local directory to deploy
-        ftp_options: |
-          --dry-run   # Run a dry-run to test without actually uploading anything.
-          --verbose   # Log more detailed information for debugging.
+        server-dir: /public_html/demo_project_cicd/
+        local-dir: ./ 
+        dry-run: true  
+        verbose: true   
+
