corrected FTP deploy step

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -140,7 +140,8 @@ jobs:
         username: ${{ secrets.ftp_username }}
         password: ${{ secrets.ftp_password }}
         server-dir: /public_html/demo_project_cicd/
-        local-dir: ./ 
-        dry-run: true  
-        verbose: true   
+        local-dir: ./
+        dry-run: true   # Run a dry-run to test without actually uploading anything
+        log-level: debug # Set log level to debug for detailed logging
+ 
 
