--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,10 +96,10 @@ jobs:
     - name: List tests
       run: vendor/bin/phpunit --configuration phpunit.xml --list-tests
 
-    # - name: Run PHPUnit tests with code coverage report
-    #   run: |
-    #     mkdir -p artifacts-coverage-report
-    #     vendor/bin/phpunit --configuration phpunit.xml --coverage-clover artifacts-coverage-report/coverage-report.xml --stop-on-failure || exit 1
+    - name: Run PHPUnit tests with code coverage report
+      run: |
+        mkdir -p artifacts-coverage-report
+        vendor/bin/phpunit --configuration phpunit.xml --coverage-clover artifacts-coverage-report/coverage-report.xml --stop-on-failure || exit 1
 
     # - name: Generate and Download Coverage Report
     #   run: |
