--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,13 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Install MySQL Client
+      run: sudo apt-get install mysql-client -y
+
+    - name: Test MySQL connection
+      run: |
+        mysql -h "${{ secrets.DB_HOST }}" -u "${{ secrets.DB_USER }}" -p"${{ secrets.DB_PASSWORD }}" -e "SHOW DATABASES;"
+
     - name: Cache Composer dependencies
       uses: actions/cache@v3
       with:
