--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,16 +20,28 @@ jobs:
         options: --health-cmd="mysqladmin ping --silent" --health-start-period=10s --health-retries=10
 
     env:
-      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_HOST: mysql
       DB_USER: ${{ secrets.DB_USER }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       DB_NAME: ${{ secrets.DB_NAME }}
-    
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
-    
-    - name: Test MySQL connection
+
+    - name: Wait for MySQL to be ready
+      run: |
+        for i in {1..30}; do
+          if mysql -h "$DB_HOST" -u "$DB_USER" -p"$DB_PASSWORD" -e "SHOW DATABASES;"; then
+            echo "MySQL is ready!"
+            break
+          else
+            echo "Waiting for MySQL to be ready..."
+            sleep 5
+          fi
+        done
+
+    - name: Run tests
       run: |
         mysql -h "${{ secrets.DB_HOST }}" -u "${{ secrets.DB_USER }}" -p"${{ secrets.DB_PASSWORD }}" -e "SHOW DATABASES;"
 
