--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,14 +32,6 @@ jobs:
     - name: Install Composer dependencies
       run: |
         composer install --no-interaction --prefer-dist
-
-    - name: Install MySQL client
-      run: sudo apt-get install -y mysql-client
-
-    - name: Test MySQL connection
-      run: |
-        echo "Testing MySQL connection..."
-        mysql -h"${DB_HOST}" -u"${DB_USER}" -p"${DB_PASSWORD}" -e "SHOW DATABASES;" || exit 1
     
     # - name: Install MySQL Client
     #   run: sudo apt-get install mysql-client -y
@@ -124,25 +116,25 @@ jobs:
     #     git commit -m "Add code coverage report [skip ci]"
     #     git push 
 
-  web-deploy:
-    name: Deploy
-    needs: web-build
-    runs-on: ubuntu-latest
+  # web-deploy:
+  #   name: Deploy
+  #   needs: web-build
+  #   runs-on: ubuntu-latest
 
-    steps:
-    - name: Get latest code
-      uses: actions/checkout@v2
+  #   steps:
+  #   - name: Get latest code
+  #     uses: actions/checkout@v2
 
-    - name: Sync files to server
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
-      with:
-        server: ${{ secrets.ftp_server }}
-        username: ${{ secrets.ftp_username }}
-        password: ${{ secrets.ftp_password }}
-        server-dir: /public_html/demo_project_cicd/
-        local-dir: ./  # Local directory to deploy
-        dry-run: true   # Run a dry-run to test without actually uploading anything
-        log-level: verbose # Use "verbose" for detailed logging
+  #   - name: Sync files to server
+  #     uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+  #     with:
+  #       server: ${{ secrets.ftp_server }}
+  #       username: ${{ secrets.ftp_username }}
+  #       password: ${{ secrets.ftp_password }}
+  #       server-dir: /public_html/demo_project_cicd/
+  #       local-dir: ./  # Local directory to deploy
+  #       dry-run: true   # Run a dry-run to test without actually uploading anything
+  #       log-level: verbose # Use "verbose" for detailed logging
 
  
 
