--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,15 +9,25 @@ jobs:
   web-build:
     name: Build and Test
     runs-on: ubuntu-latest
-    env:
-      DB_HOST: ${{ secrets.DB_HOST }}
-      DB_USER: ${{ secrets.DB_USER }}
-      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-      DB_NAME: ${{ secrets.DB_NAME }}
-      
+
+    services:
+      mysql:
+        image: mysql:8
+        ports:
+          - 3306:3306
+        env:
+          MYSQL_ROOT_PASSWORD: rootpassword
+          MYSQL_DATABASE: your_database_name
+        options: --health-cmd="mysqladmin ping --silent" --health-timeout=30s --health-retries=3
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+
+    - name: Set up PHP and MySQL
+      run: |
+        sudo apt-get update
+        sudo apt-get install mysql-client
 
     - name: Set up PHP
       uses: shivammathur/setup-php@v2
@@ -32,109 +42,30 @@ jobs:
     - name: Install Composer dependencies
       run: |
         composer install --no-interaction --prefer-dist
-    
-    # - name: Install MySQL Client
-    #   run: sudo apt-get install mysql-client -y
-    
-    # - name: Debug MySQL Connection
-    #   run: |
-    #     echo "MySQL Host: ${DB_HOST}"
-    #     echo "MySQL User: ${DB_USER}"
-    #     echo "MySQL Database: ${DB_NAME}"
-    #     mysql -h"${DB_HOST}" -u"${DB_USER}" -p"${DB_PASSWORD}" -e "SHOW DATABASES;" --verbose
 
-    # - name: Test MySQL Connection
-    #   run: |
-    #     echo "Testing MySQL connection..."
-    #     mysql -h"${DB_HOST}" -u"${DB_USER}" -p"${DB_PASSWORD}" -e "SHOW DATABASES;" || exit 1
-
-    # - name: Wait for MySQL to be ready (with timeout)
-    #   run: |
-    #     MAX_TRIES=60
-    #     COUNT=0
-    #     while ! mysqladmin ping -h"${DB_HOST}" -u"${DB_USER}" -p"${DB_PASSWORD}" --silent; do
-    #       if [ $COUNT -ge $MAX_TRIES ]; then
-    #         echo "MySQL did not become ready in time, exiting."
-    #         exit 1
-    #       fi
-    #       echo "Waiting for MySQL to be ready..."
-    #       sleep 3
-    #       COUNT=$((COUNT+1))
-    #     done
-    #     echo "MySQL is ready!"
-
-    - name: Verify PHPUnit installation
+    - name: Wait for MySQL to be ready
       run: |
-        composer show phpunit/phpunit
-
-    - name: Check if Xdebug is enabled
-      run: php -m | grep xdebug
-
-    - name: Fix execute permissions for PHPUnit
-      run: |
-        chmod +x vendor/bin/phpunit  
-
-    - name: Validate PHP syntax for all PHP files
-      run: |
-        echo "Checking PHP syntax for all PHP files..."
-        for file in $(find ./app -type f -name "*.php"); do
-          php -l $file
-          if [ $? -ne 0 ]; then
-            echo "Syntax error in $file. Exiting."
+        MAX_TRIES=60
+        COUNT=0
+        while ! mysqladmin ping -h "localhost" -u "root" -p"rootpassword" --silent; do
+          if [ $COUNT -ge $MAX_TRIES ]; then
+            echo "MySQL did not become ready in time, exiting."
             exit 1
           fi
+          echo "Waiting for MySQL to be ready..."
+          sleep 3
+          COUNT=$((COUNT+1))
         done
-
-    - name: List tests
-      run: vendor/bin/phpunit --configuration phpunit.xml --list-tests
+        echo "MySQL is ready!"
 
     - name: Run PHPUnit tests with code coverage report
       run: |
         mkdir -p artifacts-coverage-report
         vendor/bin/phpunit --configuration phpunit.xml --coverage-clover artifacts-coverage-report/coverage-report.xml --stop-on-failure || exit 1
 
-    # - name: Generate and Download Coverage Report
-    #   run: |
-    #     php public/custom-script/generate_coverage_report.php
-
-    # - name: Upload code coverage report
-    #   if: success()
-    #   uses: actions/upload-artifact@v3
-    #   with:
-    #     name: artifacts-coverage-report
-    #     path: artifacts-coverage-report/**
-
-    # - name: Commit and Push Coverage Report to Repository
-    #   if: success()
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.TOKEN }}
-    #   run: |
-    #     git config user.name "GitHub Actions"
-    #     git config user.email "actions@github.com"
-    #     git remote set-url origin https://${GITHUB_TOKEN}@github.com/kalpanavasava/demo_project_cicd.git
-    #     git add artifacts-coverage-report/
-    #     git commit -m "Add code coverage report [skip ci]"
-    #     git push 
-
-  # web-deploy:
-  #   name: Deploy
-  #   needs: web-build
-  #   runs-on: ubuntu-latest
-
-  #   steps:
-  #   - name: Get latest code
-  #     uses: actions/checkout@v2
-
-  #   - name: Sync files to server
-  #     uses: SamKirkland/FTP-Deploy-Action@v4.3.5
-  #     with:
-  #       server: ${{ secrets.ftp_server }}
-  #       username: ${{ secrets.ftp_username }}
-  #       password: ${{ secrets.ftp_password }}
-  #       server-dir: /public_html/demo_project_cicd/
-  #       local-dir: ./  # Local directory to deploy
-  #       dry-run: true   # Run a dry-run to test without actually uploading anything
-  #       log-level: verbose # Use "verbose" for detailed logging
-
- 
-
+    - name: Upload code coverage report
+      if: success()
+      uses: actions/upload-artifact@v3
+      with:
+        name: artifacts-coverage-report
+        path: artifacts-coverage-report/**
