--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,7 @@ jobs:
         ports:
           - 3306:3306
         env:
-          MYSQL_ROOT_PASSWORD: rootpassword
-          MYSQL_DATABASE: your_database_name
+          MYSQL_DATABASE: demo_project_cicd
         options: --health-cmd="mysqladmin ping --silent" --health-timeout=30s --health-retries=3
 
     steps:
@@ -47,7 +46,7 @@ jobs:
       run: |
         MAX_TRIES=60
         COUNT=0
-        while ! mysqladmin ping -h "localhost" -u "root" -p"rootpassword" --silent; do
+        while ! mysqladmin ping -h "localhost" -u "root" --silent; do
           if [ $COUNT -ge $MAX_TRIES ]; then
             echo "MySQL did not become ready in time, exiting."
             exit 1
