--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,8 @@ jobs:
         ports:
           - 3306:3306
         env:
-          MYSQL_DATABASE: demo_project_cicd
+          MYSQL_ROOT_PASSWORD: ""  
+          MYSQL_DATABASE: demo_project_cicd  
         options: --health-cmd="mysqladmin ping --silent" --health-timeout=30s --health-retries=3
 
     steps:
