--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         env:
           MYSQL_ROOT_PASSWORD: ""  
           MYSQL_DATABASE: demo_project_cicd  
-        options: --health-cmd="mysqladmin ping --silent" --health-timeout=30s --health-retries=3
+        options: --health-cmd="mysqladmin ping --silent" --health-timeout=60s --health-retries=5
 
     steps:
     - name: Checkout repository
@@ -45,7 +45,7 @@ jobs:
 
     - name: Wait for MySQL to be ready
       run: |
-        MAX_TRIES=60
+        MAX_TRIES=120  # Increased retries to give MySQL more time to start
         COUNT=0
         while ! mysqladmin ping -h "localhost" -u "root" --silent; do
           if [ $COUNT -ge $MAX_TRIES ]; then
