--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,59 +14,59 @@ jobs:
       mysql:
         image: mysql:8.0
         env:
-          # MYSQL_ROOT_PASSWORD: ""  
-          MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+          MYSQL_ROOT_PASSWORD: rootpassword
           MYSQL_DATABASE: demo_project_cicd
         ports:
           - 3306:3306
-        options: --health-cmd="mysqladmin ping -h mysql --silent" --health-interval=5s --health-timeout=3s --health-retries=3
+        options: --health-cmd="mysqladmin ping -h mysql --silent" --health-interval=10s --health-timeout=10s --health-retries=5
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Set up PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '8.2'
-          extensions: mbstring, intl, bcmath, xdebug, mysqli
-          coverage: xdebug
+    - name: Install wait-for-it
+      run: |
+        curl -sSL https://github.com/vishnubob/wait-for-it/releases/download/v2.5.0/wait-for-it.sh -o wait-for-it.sh
+        chmod +x wait-for-it.sh
 
-      - name: Install Composer globally
-        run: curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+    - name: Wait for MySQL to be ready
+      run: |
+        ./wait-for-it.sh mysql:3306 --timeout=60 --strict -- echo "MySQL is ready!"
 
-      - name: Install Composer dependencies
-        run: composer install --no-interaction --prefer-dist
+    - name: Set up PHP and MySQL
+      run: |
+        sudo apt-get update
+        sudo apt-get install mysql-client
 
-      - name: Wait for MySQL to be ready
-        run: |
-          MAX_TRIES=60
-          COUNT=0
-          while ! mysqladmin ping -h "mysql" --silent; do
-            if [ $COUNT -ge $MAX_TRIES ]; then
-              echo "MySQL did not become ready in time, exiting."
-              exit 1
-            fi
-            echo "Waiting for MySQL to be ready..."
-            sleep 5
-            COUNT=$((COUNT+1))
-          done
-          echo "MySQL is ready!"
+    - name: Set up PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: '8.2'
+        extensions: mbstring, intl, bcmath, xdebug, mysqli
+        coverage: xdebug
 
-      - name: Verify MySQL database
-        run: |
-          mysql -h mysql -u root -e "SHOW DATABASES;"
+    - name: Install Composer globally
+      run: curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-      - name: Run PHPUnit tests with code coverage report
-        run: |
-          mkdir -p artifacts-coverage-report
-          vendor/bin/phpunit --configuration phpunit.xml --coverage-clover artifacts-coverage-report/coverage-report.xml --stop-on-failure || exit 1
+    - name: Install Composer dependencies
+      run: |
+        composer install --no-interaction --prefer-dist
 
-      - name: Upload code coverage report
-        if: success()
-        uses: actions/upload-artifact@v3
-        with:
-          name: artifacts-coverage-report
-          path: artifacts-coverage-report/**
+    - name: List all Docker containers
+      run: |
+        docker ps -a
+
+    - name: Run PHPUnit tests with code coverage report
+      run: |
+        mkdir -p artifacts-coverage-report
+        vendor/bin/phpunit --configuration phpunit.xml --coverage-clover artifacts-coverage-report/coverage-report.xml --stop-on-failure || exit 1
+
+    - name: Upload code coverage report
+      if: success()
+      uses: actions/upload-artifact@v3
+      with:
+        name: artifacts-coverage-report
+        path: artifacts-coverage-report/**
+
 
 
