--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
   "autoload": {
       "psr-4": {
-          "App\\Models\\": "app/Models/",
-          "App\\Controllers\\": "app/Controllers/"
+          "App\\Models\\": "app/models/",
+          "App\\Controllers\\": "app/controllers/"
       }
   },
   "require-dev": {
