--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -137,8 +137,8 @@ jobs:
         server: ${{ secrets.ftp_server }}
         username: ${{ secrets.ftp_username }}
         password: ${{ secrets.ftp_password }}
-        server-dir: /demo_project_cicd/
-        local-dir: ./  # Local directory to deploy
-        dry-run: true   # Run a dry-run to test without actually uploading anything
-        log-level: verbose # Use "verbose" for detailed logging
-        force: true 
+        server-dir: /public_html/demo_project_cicd/
+        local-dir: ./
+        dry-run: false
+        log-level: verbose
+        force: true
