--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -137,7 +137,7 @@ jobs:
         server: ${{ secrets.ftp_server }}
         username: ${{ secrets.ftp_username }}
         password: ${{ secrets.ftp_password }}
-        # server-dir: /public_html/demo_project_cicd/
+        server-dir: ./
         local-dir: ./
         dry-run: false
         log-level: verbose
