--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -137,8 +137,8 @@ jobs:
         server: ${{ secrets.ftp_server }}
         username: ${{ secrets.ftp_username }}
         password: ${{ secrets.ftp_password }}
-        server-dir: ./
-        local-dir: ./
-        dry-run: false
-        log-level: verbose
-        force: true
+        server-dir: ./  # Current directory of FTP root
+        local-dir: ./  # Local directory to deploy (usually the repo root)
+        dry-run: false  # Set to false to actually upload files
+        log-level: verbose  # Log all steps for detailed output
+        force: true  # Overwrite existing files if necessary
